syntax = "proto3";

package ru.idgroup.otus.mp.generated;

message RequestSequenceMessage {
    int64 firstValue = 1;
    int64 lastValue = 2;
}

message GenNumberMessage {
    int64 value = 1;
}

service RemoteSequence {
    rpc getSequence(RequestSequenceMessage) returns (stream GenNumberMessage);
}
